[gd_scene load_steps=3 format=3 uid="uid://0byotclkl3jy"]

[ext_resource type="Script" uid="uid://d0nd7rpmifdpk" path="res://scripts/ui/main_manu.gd" id="1_sl1te"]
[ext_resource type="Texture2D" uid="uid://18yp3kf5ca84" path="res://assets/sprites/backgrounds/5.png" id="2_fe2o3"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_sl1te")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 480.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_fe2o3")
expand_mode = 3
stretch_mode = 4

[node name="Container" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -135.0
offset_right = 150.0
offset_bottom = 135.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="Main" type="MarginContainer" parent="Container"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Container/Main"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_constants/separation = 10

[node name="NewGameBtn" type="Button" parent="Container/Main/VBoxContainer" node_paths=PackedStringArray("shortcut_context")]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
focus_neighbor_top = NodePath("../MarginContainer/ExitBtn")
focus_neighbor_bottom = NodePath("../ContinueBtn")
focus_next = NodePath("../ContinueBtn")
shortcut_context = NodePath("..")
theme_override_font_sizes/font_size = 26
text = "KEY_NEW_GAME"
language = "Rus_RU"

[node name="ContinueBtn" type="Button" parent="Container/Main/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
disabled = true
text = "KEY_CONTINUE"

[node name="SettingsBtn" type="Button" parent="Container/Main/VBoxContainer" node_paths=PackedStringArray("shortcut_context")]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
focus_neighbor_top = NodePath("../ContinueBtn")
focus_neighbor_bottom = NodePath("../MarginContainer/ExitBtn")
focus_next = NodePath("../MarginContainer/ExitBtn")
focus_previous = NodePath("../ContinueBtn")
shortcut_context = NodePath("..")
theme_override_font_sizes/font_size = 26
disabled = true
text = "KEY_SETTINGS"

[node name="MarginContainer" type="MarginContainer" parent="Container/Main/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10

[node name="ExitBtn" type="Button" parent="Container/Main/VBoxContainer/MarginContainer" node_paths=PackedStringArray("shortcut_context")]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
focus_neighbor_bottom = NodePath("../../NewGameBtn")
shortcut_context = NodePath("../..")
theme_override_font_sizes/font_size = 26
text = "KEY_EXIT"
language = "Rus_RU"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
autoplay = true

[connection signal="pressed" from="Container/Main/VBoxContainer/NewGameBtn" to="." method="_on_play_game_pressed"]
[connection signal="pressed" from="Container/Main/VBoxContainer/ContinueBtn" to="." method="_on_continue_btn_pressed"]
[connection signal="pressed" from="Container/Main/VBoxContainer/MarginContainer/ExitBtn" to="." method="_on_exit_btn_pressed"]
